<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textColor="@color/ipw_primary_color"
        android:textSize="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/AboutTextView"
                android:text="@string/about_string1" />

            <TextView
                style="@style/AboutTextView"
                android:text="@string/about_string2" />

            <TextView
                style="@style/AboutTextView"
                android:text="@string/about_string3" />

            <TextView
                style="@style/AboutTextView"
                android:text="@string/about_string4" />

            <TextView
                style="@style/AboutTextView"
                android:text="@string/about_string5" />

            <TextView
                style="@style/AboutTextView"
                android:text="@string/about_string6" />

            <TextView
                style="@style/AboutTextView"
                android:text="@string/about_string7" />

            <TextView
                style="@style/AboutTextView"
                android:text="@string/about_string8" />

            <TextView
                style="@style/AboutTextView"
                android:text="@string/about_string9" />

            <TextView
                style="@style/AboutTextView"
                android:text="@string/about_string10" />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>